# rlhf_eval_lab

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  Makefile  README.md  pyproject.toml  requirements-hf.txt  requirements.txt
.github/workflows/: ci.yml
docs/: harmbench_scope.md
notebooks/: rlhf_eval_lab_colab_minimal.ipynb
rlhf_eval_lab/: __init__.py  __main__.py
rlhf_eval_lab/backends/: __init__.py  base.py
rlhf_eval_lab/cli/: __init__.py  main.py
rlhf_eval_lab/config/: __init__.py  defaults.yaml  io.py  schema.py
rlhf_eval_lab/data/: __init__.py  hh_rlhf.py  loaders.py  schemas.py  splits.py
rlhf_eval_lab/eval/: __init__.py  diagnostics.py  judge.py  kl.py  offsupport.py  onsupport.py  preference.py  runner.py  safety.py  tailvar.py
rlhf_eval_lab/registry/: __init__.py  datasets.py  methods.py  metrics.py  specs.py
rlhf_eval_lab/reporting/: __init__.py  aggregate.py  artifacts.py  markdown.py  paths.py  provenance.py  validate_report_md.py
rlhf_eval_lab/utils/: __init__.py  exceptions.py  hashing.py  logging.py  time.py  update_readme_metrics_ssot.py
scripts/: guard_no_tracked_generated.py
test_data/: harmbench_small.jsonl  offline_prompts_small.jsonl  prefs.jsonl  prompts.jsonl
tests/integration/: test_e2e_fallback.py  test_e2e_level_c_hf.py  test_e2e_offline_harmbench_small.py  test_e2e_offline_hh_small.py  test_hf_e2e_optional.py
tests/unit/: test_config_dataset_schema.py  test_dataset_loader_hh_jsonl.py  test_hh_rlhf_io.py  test_markdown_tables_follow_metrics_ssot.py  test_readme_metrics_ssot.py  test_report_md_validate.py
(+52 files in other folders)
